Bug 127110 - Vesion 6.3.0.4 not saving .xlsx files correctly
Summary: Vesion 6.3.0.4 not saving .xlsx files correctly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:6.4.0 target:6.3.2
Keywords: bibisected, bisected, filter:xlsx, regression
Depends on:
Blocks: XLSX
  Show dependency treegraph
 
Reported: 2019-08-23 09:17 UTC by Wally
Modified: 2019-09-27 12:57 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
copy of file after problem (5.76 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-08-25 12:10 UTC, Wally
Details
copy of file before problem (5.38 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-08-25 12:10 UTC, Wally
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wally 2019-08-23 09:17:10 UTC
Description:

After making some changes (doesn't matter how many} to a Spreadsheet (format is .xlsx), I place the cursor in a cell (doesn't matter what cell) and display the page on the screen.  I save the Spreadsheet and close it.  When I open the Spreadsheet again, the page with the cursor is not displayed, but another page from a save many times ago is displayed.  This happens in version 6.3.0.4.  I have completely removed version 6.3.0.4 and reinstalled 6.2.5.2 and the problem is gone.  Note that all my Spreadsheets are in .xlsx format because my wife's laptop has Office 2007 and she doesn't want to learn LibreOffice at the moment.  I don't think the .xlsx format is the problem.

Actual Results:
no comment

Expected Results:
no comment


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Oliver Brinzing 2019-08-24 08:16:57 UTC
Thank you for reporting the bug. 

To be certain the reported issue is not
related to corruption in the user profile, could you please reset your
Libreoffice profile ( https://wiki.documentfoundation.org/UserProfile ) and
re-test?

If the issue still exists, please attach a sample document, as this makes it easier for us to verify the bug. 
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
Comment 2 Oliver Brinzing 2019-08-25 08:55:12 UTC
(In reply to Wally from comment #0)

Can you please attach your description and sample documents to the issue?
-> [Add an attachment]
Comment 3 Wally 2019-08-25 12:10:12 UTC
Created attachment 153634 [details]
copy of file after problem
Comment 4 Wally 2019-08-25 12:10:43 UTC
Created attachment 153635 [details]
copy of file before problem
Comment 5 Wally 2019-08-25 12:11:22 UTC
I reset the profile per the instructions and ran in safe mode and the problem is still there.

Since I have already reinstalled version 6.2.5.2 and reinstalled my latest backup profile, I have just reinstalled 6.3.0.4 over top of 6.2.5.2.  The profile is in perfect shape as I used a backup profile from August 1, 2019.  I have attached a before and after version of a file. The before version has not been modified by 6.3.0.4.  The after version has had the following done to it.  I added some lines of code, placed the cursor in cell A46, saved the file with cell A46 displayed on the screen, closed the file, opened the file, and it displayed cell A46 as it should,  put the cursor in cell A9, saved the file with cell A9 displayed on the screen, closed the file, opened the file, the cursor is still in cell A9 but cell A9 is not displayed on the screen, cell A46 is displayed.  Cell A9 should be displayed.  Hope this helps.

Brian Waldron
Comment 6 Wally 2019-08-25 12:12:55 UTC
Oliver, please be aware that this is my first sojurn through Bugzilla so I have no idead how it works.
Comment 7 Oliver Brinzing 2019-08-29 09:48:37 UTC
reproducible with:

Version: 6.3.1.1 (x64)
Build ID: e979878b49a48dab15ebe528f238b88125e32c65
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: 

steps to reproduce:
- open "Great Lakes Freighters after.xlsx" 
- cell cursor selects cell A9, but first visible row is 39
  (same happens if opened with ms excel 2016)
- scroll to row 1 and select cell A1
- save
- reload
-> cell cursor now selects cell A1, but first visible row is still 39

but *not* reproducible with:

Version: 6.2.6.2 (x64)
Build-ID: 684e730861356e74889dfe6dbddd3562aae2e6ad
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc:
Comment 8 Thomas Lendo 2019-08-29 23:31:39 UTC
Adding keywords regression and filter:xlsx
Comment 9 raal 2019-09-02 18:26:23 UTC
This seems to have begun at the below commit.
Adding Cc: to László Németh ; Could you possibly take a look at this one?
Thanks
 3fe34c889435e5361493124492e03854d589fc47 is the first bad commit
commit 3fe34c889435e5361493124492e03854d589fc47
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Feb 19 01:23:00 2019 +0100

    source 3707e2a7b8b05617b0afb75374f866c967593861

author	László Németh <nemeth@numbertext.org>	2019-02-18 18:29:51 +0100
committer	László Németh <nemeth@numbertext.org>	2019-02-19 01:14:12 +0100
commit 3707e2a7b8b05617b0afb75374f866c967593861 (patch)
tree abd4602d22bdb518c648aadefa2395f1759eaf65
parent 6fb9ef15aa67b91dec016873ad8224db2323291c (diff)
tdf#122624 XLSX OLE in DOCX: export view positions
Comment 10 László Németh 2019-09-03 07:28:03 UTC
(In reply to raal from comment #9)
> Adding Cc: to László Németh ; Could you possibly take a look at this one?
> Thanks

Yes, I started to check it, thanks for your report.
Comment 11 Commit Notification 2019-09-04 06:29:35 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/47aa9324e3d15fcc9d1195b9b0822b5568e6d96e%5E%21

tdf#127110 XLSX export: fix bad view position

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2019-09-05 10:21:40 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: bb9c07b82f4921941112de7e545af13a24b37f5d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!!
Comment 13 Commit Notification 2019-09-05 10:26:48 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/09afdc89572202f100e5ab5112ae0878ae032fc1%5E%21

tdf#127110 XLSX export: fix bad view position

It will be available in 6.3.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Wally 2019-09-27 12:57:28 UTC
I have tested with 6.3.2.2 and all works OK.