tdf#127110 XLSX export: fix bad view position

Update SheetView attribute topLeftCell only
in the case of embedded OLE sheets.

Regression from commit 3707e2a7b8b05617b0afb75374f866c967593861
"tdf#122624 XLSX OLE in DOCX: export view positions".

Change-Id: I9ea57ff1531d710bff34df12fb7e0bb1e3edbea5
Reviewed-on: https://gerrit.libreoffice.org/78570
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 47aa9324e3d15fcc9d1195b9b0822b5568e6d96e)
Reviewed-on: https://gerrit.libreoffice.org/78577
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>